--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 
 html{
     scroll-behavior: smooth;
-    background-color: #212121;
+    /* background-color: #212121; */
 }
 
 html, body {
@@ -44,6 +44,25 @@ header{
     padding-left: 1em;
     width: 50%;
     margin-left: 10em;
+}
+
+.hidden-button {
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+#back-form {
+    display: flex;
+    align-items: center;
+    /* margin-top: 20px; Adjust the top margin as needed */
+}
+
+#back-label {
+    font-size: 2.75em !important;
+    font-weight:bolder;
+    margin: 0;
 }
 
 main p{
